@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-15T08:25:02Z",
+  "timestamp" : "2022-06-15T16:24:42Z",
   "count_outdated" : 2153,
   "uniques_outdated" : 430,
-  "count" : 2183,
-  "uniques" : 450,
+  "count" : 2184,
+  "uniques" : 451,
   "clones" : [
     {
       "timestamp": "2022-06-01T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
