@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 7,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
